--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -24,24 +24,24 @@ layout: default
         Follow me on twitter!
         <br><br>
         <a href="https://twitter.com/_PatrickDowning?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @_PatrickDowning</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        <div class="htb">
+        <!--<div class="htb">
             <br>
             <a href="https://www.hackthebox.eu/profile/137488">
                <img src="https://www.hackthebox.eu/badge/image/137488">
             </a>
-        </div>
+        </div>-->
       </div>
       {% elsif site.twitter_username %}
       <div class="content-panel feedback">
         Follow me on twitter!
         <br><br>
         <a href="https://twitter.com/_PatrickDowning?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @_PatrickDowning</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        <div class="htb">
+        <!--<div class="htb">
             <br>
             <a href="https://www.hackthebox.eu/profile/137488">
                <img src="https://www.hackthebox.eu/badge/image/137488">
             </a>
-        </div>
+        </div>-->
       </div>
       {% elsif site.disqus_account %}
       <div class="content-panel feedback">
