--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -107,34 +107,34 @@ layout: default
         Follow me and let me know what you think of this article on twitter!
         <br><br>
         <a href="https://twitter.com/_PatrickDowning?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @_PatrickDowning</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        <div class="htb">
+        <!--<div class="htb">
           <br>
           <a href="https://www.hackthebox.eu/profile/137488">
              <img src="https://www.hackthebox.eu/badge/image/137488">
           </a>
-      </div>
+      </div>-->
       </div>
       {% elsif site.twitter_username %}
       <div class="content-panel feedback">
         Follow me and let me know what you think of this article on twitter!
         <br><br>
         <a href="https://twitter.com/_PatrickDowning?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-count="false">Follow @_PatrickDowning</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        <div class="htb">
+        <!--<div class="htb">
             <br>
             <a href="https://www.hackthebox.eu/profile/137488">
                <img src="https://www.hackthebox.eu/badge/image/137488">
             </a>
-        </div>
+        </div>-->
       </div>
       {% elsif site.disqus_account %}
       <div class="content-panel feedback">
         Let me know what you think of this article in the comment section below!
-        <div class="htb">
+        <!--<div class="htb">
             <br>
             <a href="https://www.hackthebox.eu/profile/137488">
                <img src="https://www.hackthebox.eu/badge/image/137488">
             </a>
-        </div>
+        </div>-->
       </div>
       {% endif %}
 
