--- a/_includes/social_links.html
+++ b/_includes/social_links.html
@@ -8,8 +8,8 @@
   {% if site.github_username %}<a href="https://github.com/{{ site.github_username }}" target="_new"><i class="fa fa-github"></i></a>{% endif %}
   {% if site.stackoverflow_link %}<a href="{{ site.stackoverflow_link }}" target="_new"><i class="fa fa-stack-overflow"></i></a>{% endif %}
   {% if site.instagram_username %}<a href="https://www.instagram.com/{{ site.instagram_username }}" target="_new"><i class="fa fa-instagram"></i></a>{% endif %}
-  {% if site.hackerone_username %}<a href="https://hackerone.com/{{ site.hackerone_username }}" target="_new"><i class="icon-hackerone"></i></a>{% endif %}
+  {% if site.ctftime_username %}<a href="https://ctftime.org/user/{{ site.ctftime_username }}" target="_new"><i class="icon-favicon"></i></a>{% endif %}
   {% if site.twitch_username %}<a href="https://twitch.tv/{{ site.twitch_username }}" target="_new"><i class="fa fa-twitch"></i></a>{% endif %}
-  {% if site.hackthebox_username %}<a href="https://www.hackthebox.eu/profile/{{ site.hackthebox_username }}" target="_new"><i class="icon-hackthebox"></i></a>{% endif %}
+  {% if site.hackthebox_username %}<a href="https://www.hackthebox.eu/profile/{{ site.hackthebox_username }}" target="_new"><i class="icon-3dcube"></i></a>{% endif %}
   <a href="{{ site.baseurl }}/feed.xml" target="_new"><i class="fa fa-rss"></i></a>
 </p>
