--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?30649874');
-  src: url('../font/fontello.eot?30649874#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?30649874') format('woff2'),
-       url('../font/fontello.woff?30649874') format('woff'),
-       url('../font/fontello.ttf?30649874') format('truetype'),
-       url('../font/fontello.svg?30649874#fontello') format('svg');
+  src: url('../font/fontello.eot?6334378');
+  src: url('../font/fontello.eot?6334378#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?6334378') format('woff2'),
+       url('../font/fontello.woff?6334378') format('woff'),
+       url('../font/fontello.ttf?6334378') format('truetype'),
+       url('../font/fontello.svg?6334378#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?30649874#fontello') format('svg');
+    src: url('../font/fontello.svg?6334378#fontello') format('svg');
   }
 }
 */
@@ -24,12 +24,12 @@
   font-family: "fontello";
   font-style: normal;
   font-weight: normal;
-  speak: none;
+  speak: never;
  
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
-  margin-right: .1em;
+  margin-right: .2em;
   text-align: center;
   /* opacity: .8; */
  
@@ -42,10 +42,45 @@
  
   /* Animation center compensation - margins should be symmetric */
   /* remove if not needed */
-  margin-left: .1em;
+  margin-left: .2em;
  
   /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
+  font-size: 90%; 
+ 
+  /* Font smoothing. That was taken from TWBS */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+ 
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+}
+
+[class^="icon-"]:after, [class*=" icon-"]:after {
+  font-family: "fontello";
+  font-style: normal;
+  font-weight: normal;
+  speak: never;
+ 
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .08em;
+  text-align: center;
+  /* opacity: .8; */
+ 
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+ 
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+ 
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: .08em;
+ 
+  /* you can be more comfortable with increased icons size */
+  font-size: 100%; 
  
   /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
@@ -55,5 +90,5 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-hackerone:before { content: '\e800'; } /* '' */
-.icon-hackthebox:before { content: '\e803'; } /* '' */
+.icon-favicon:before { content: '\e801'; } /* '' */
+.icon-3dcube:after { content: '\e804'; } /* '' */
