--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -21,7 +21,7 @@
     }
   }
   .post-preview {
-    padding-top: 1.5rem;
+    padding-top: 0.5rem;
     padding-bottom: 1rem;
     border-bottom: 1px solid var(--main-border-color);
     &:hover {
@@ -30,10 +30,13 @@
     } 
     h1 {
       font-size: 1.4rem;
-      padding-top: 1.3rem;
+      padding-top: 0.5rem;
       margin: 0;
       ~i { // pinned icon
         font-size: 0.86rem;
+      }
+    img {
+      padding-left: 0.5rem;
       }
     }
 
