--- a/assets/css/categories.scss
+++ b/assets/css/categories.scss
@@ -18,7 +18,10 @@
   margin-bottom: 2rem;
   .card-header {
     padding-right: 12px;
-    border-radius: 20px;
+    border-radius: 10px;
+  }
+  &:hover {
+    border-bottom: 1px solid rgba(95, 165, 236, 0.8);
   }
   .list-group-item {
     border-left: none;
